--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "webpack": "^2.1.0-beta.22",
     "webpack-dev-server": "^2.1.0-beta.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ali-oss": "^4.10.1"
+  }
 }
